[metadata]
name = Flask-LightDFS
license = MIT
author = HuaiYue
author_email = ywang_perfect@163.com
description =  Distributed storage system for Flask.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
source =
    flask_lightdfs

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
;per-file-ignores =
;    # __init__ exports names
;    src/flask_lightdfs/__init__.py: F401
